<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewLoanAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loan_amount"
        app:layout_constraintBottom_toBottomOf="@+id/editTextLoanAmount"
        app:layout_constraintEnd_toStartOf="@+id/editTextLoanAmount"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextLoanAmount"
        app:layout_constraintVertical_bias="0.653" />

    <EditText
        android:id="@+id/editTextLoanAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="@string/total_loan_amount"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textViewLoanTermLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loan_term"
        app:layout_constraintBottom_toBottomOf="@+id/editTextLoanTerm"
        app:layout_constraintEnd_toStartOf="@+id/editTextLoanTerm"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextLoanTerm" />

    <EditText
        android:id="@+id/editTextLoanTerm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="@string/number_of_terms"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoanAmount"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textViewInterestRateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interest_rate"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerRates"
        app:layout_constraintEnd_toStartOf="@+id/spinnerRates"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinnerRates" />

    <Spinner
        android:id="@+id/spinnerRates"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:entries="@array/rates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextLoanTerm"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="200dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:checkedButton="@id/radioButtonMonths"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/editTextLoanTerm"
        app:layout_constraintStart_toStartOf="@+id/editTextLoanTerm"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoanTerm">

        <RadioButton
            android:id="@+id/radioButtonMonths"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/months" />

        <RadioButton
            android:id="@+id/radioButtonYears"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/years" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewMonthyPaymentsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monthly_payment"
        app:layout_constraintBottom_toTopOf="@+id/textViewInterestPaidLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25
"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textViewInterestPaidLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_interest_paid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.249"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInterestPaidLabel" />

    <TextView
        android:id="@+id/textViewMonthlyPayments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textViewMonthyPaymentsLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewMonthyPaymentsLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewMonthyPaymentsLabel" />

    <TextView
        android:id="@+id/textViewInterestPaid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textViewInterestPaidLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewInterestPaidLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewInterestPaidLabel" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />


</androidx.constraintlayout.widget.ConstraintLayout>